--- a/index.html
+++ b/index.html
@@ -1,41 +1,117 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MODEL | Model Management</title>
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
     <link rel="icon" href="medium-m-brands.svg">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-</head>
-<body>
-    <nav>
-        <div class="logo">
-            <a href="index.html"><img src="imagenes/logo.png"></a>
-        </div>
-        <input type="checkbox" id="click">
-        <label for="click" class="menu-btn">
-            <i class="fas fa-bars"></i>
-        </label>
-        <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="galeria.html">gallery</a></li>
-            <li><a href="seunmodelo.html">be a model</a></li>
-            <li><a href="acercadenosotros.html">about us</a></li>
-            <li><a href="contacto.html">contact</a></li>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="estilos.css">
+    <title>Index</title>
+  </head>
+  <body>
+  <!--========================================================== -->
+                        <!-- ENCABEZADO -->
+  <!--========================================================== -->
+  <nav  class="navbar navbar-expand-lg navbar-dark p-3"  id="menu">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+          <img src="imagenes/logo.png" alt="logete">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon">
+            <i class="fas fa-bars" style="color: white; font-size:28px;"></i>
+        </span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="index.html">home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="galeria.html">gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#seccion-contacto">Be A Model</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#seccion-contacto">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#seccion-contacto">Contact</a>
+          </li>
         </ul>
-    </nav>
-    <div class="contenedor">
-        <h1>pag.inicio</h1>
-    </div>    
-    <footer>
-        <p>&copy; 2022-♾ MaleManagement | All Rights Reserved</p>
-    </footer>               
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-</body>
+      </div>
+
+    </div>
+  </nav>
+    <!--========================================================== -->
+                        <!-- SLIDER DE IMAGENES-->
+    <!--========================================================== -->
+    <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="3000">
+            <img class="img-fluid" src="imagenes/w-1.jpg" class="d-block w-100" alt="slide1">
+          </div>
+          
+ 
+          <div class="carousel-item" data-bs-interval="3000">
+            <img class="img-fluid" src="imagenes/w-2.jpg" class="d-block w-100" alt="slide2">
+          </div>
+ 
+
+          <div class="carousel-item" data-bs-interval="3000">
+            <img class="img-fluid" src="imagenes/w-3.jpg" class="d-block w-100" alt="slide3">
+          </div>
+ 
+ 
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel"  data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel"  data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>  
+      
+    <!--========================================================== -->
+                        <!-- INTRO -->
+    <!--========================================================== -->   
+    <div class="jumbotron">
+        <h1 class="display-4">INSTAGRAM</h1>
+        <p class="lead">seguinos en nuestras redes sociales.</p>
+        <p class="lead">
+          <a class="btn btn-dark btn-lg" href="https://www.instagram.com/" target="_blank" role="button">Explorar</a>
+        </p>
+      </div>
+
+<!--========================================================== -->
+                        <!--FOOTER-->
+<!--========================================================== -->
+
+    <footer class="w-100 d-flex  align-items-center justify-content-center flex-wrap">
+        <p class="fs-5 px-3  pt-3">Male Management &copy; All Rights Reserved 2022</p>
+        <div id="iconos" >
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-twitter"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>  
+        </div>
+  </footer>      
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+
+  </body>
 </html>
