--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!--========================================================== -->
   <nav  class="navbar navbar-expand-lg navbar-dark p-3"  id="menu">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
           <img src="imagenes/logo.png" alt="logete">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,13 +37,13 @@
             <a class="nav-link" href="galeria.html">gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#seccion-contacto">Be A Model</a>
+            <a class="nav-link" href="seunmodelo.html">Be A Model</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#seccion-contacto">About Us</a>
+            <a class="nav-link" href="acercadenosotros.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#seccion-contacto">Contact</a>
+            <a class="nav-link" href="contacto.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -61,17 +61,17 @@
           </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img class="img-fluid" src="imagenes/w-1.jpg" class="d-block w-100" alt="slide1">
+            <img class="img-fluid" src="imagenes/olu.jpg" class="d-block w-100" alt="slide1">
           </div>
           
  
           <div class="carousel-item" data-bs-interval="3000">
-            <img class="img-fluid" src="imagenes/w-2.jpg" class="d-block w-100" alt="slide2">
+            <img class="img-fluid" src="imagenes/filipp.jpg" class="d-block w-100" alt="slide2">
           </div>
  
 
           <div class="carousel-item" data-bs-interval="3000">
-            <img class="img-fluid" src="imagenes/w-3.jpg" class="d-block w-100" alt="slide3">
+            <img class="img-fluid" src="imagenes/levi.jpg" class="d-block w-100" alt="slide3">
           </div>
  
  
@@ -104,9 +104,9 @@
     <footer class="w-100 d-flex  align-items-center justify-content-center flex-wrap">
         <p class="fs-5 px-3  pt-3">Male Management &copy; All Rights Reserved 2022</p>
         <div id="iconos" >
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-twitter"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>  
+            <a href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a>
+            <a href="https://twitter.com/"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>  
         </div>
   </footer>      
     <!-- Option 1: Bootstrap Bundle with Popper -->
