--- a/galeria.html
+++ b/galeria.html
@@ -20,7 +20,7 @@
 <!--========================================================== -->          
     <nav  class="navbar navbar-expand-lg navbar-dark p-3"  id="menu">
         <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
               <img src="imagenes/logo.png" alt="logete">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,13 +38,13 @@
                 <a class="nav-link" href="galeria.html">gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#seccion-contacto">Be A Model</a>
+                <a class="nav-link" href="seunmodelo.html">Be A Model</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#seccion-contacto">About Us</a>
+                <a class="nav-link" href="acercadenosotros.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#seccion-contacto">Contact</a>
+                <a class="nav-link" href="contacto.html">Contact</a>
               </li>
             </ul>
           </div>
