--- a/contacto.html
+++ b/contacto.html
@@ -66,15 +66,15 @@
         <form class="row g-3">
             <div class="col-md-6">
                 <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="nombre" required>
+                <input type="text" class="form-control" id="nombre" placeholder="Alex" required>
             </div>
             <div class="col-md-6">
                 <label for="apellido" class="form-label">Apellido</label>
-                <input type="text" class="form-control" id="apellido" required>
+                <input type="text" class="form-control" id="apellido" placeholder="Lopez" required>
             </div>
             <div class="col-md-8">
                 <label for="emailInfo" class="form-label">Email</label>
-                <input type="email" class="form-control" id="emailInfo" required>
+                <input type="email" class="form-control" id="emailInfo" placeholder="ejemplo@email.com" required>
             </div>
             <div class="col-md-4">
                 <label for="telefono" class="form-label">Telefono</label>
@@ -82,10 +82,10 @@
             </div>
             <div class="col-md-12">
                 <label for="comentarios" class="form-label">Comentarios, Dudas?</label>
-                <textarea class="form-control" id="comentarios" rows="3" required></textarea>
+                <textarea class="form-control" id="comentarios" rows="3" placeholder="Escribe Aqui" required></textarea>
             </div>
             <div class="col-md-12">
-                <button type="submit" class="btn btn-dark">Enivar</button>
+                <button type="submit" class="btn btn-dark">Enviar</button>
             </div>
         </form>
       </div>
