--- a/seunmodelo.html
+++ b/seunmodelo.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="estilos.css">
 
-    <title>contacto</title>
+    <title>MODEL | Management</title>
   </head>
   <body>
 <!--========================================================== -->
@@ -74,7 +74,7 @@
                         <!--FOOTER-->
 <!--========================================================== -->      
       <footer class="w-100 d-flex  align-items-center justify-content-center flex-wrap">
-        <p class="fs-5 px-3  pt-3">Male Management &copy; All Rights Reserved 2022</p>
+        <p class="fs-5 px-3  pt-3">MODEL Management &copy; All Rights Reserved 2022</p>
         <div id="iconos" >
             <a href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a>
             <a href="https://twitter.com/"><i class="bi bi-twitter"></i></a>
