--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
     <link rel="stylesheet" href="estilos.css">
-    <title>Index</title>
+    <title>MODEL | Management</title>
   </head>
   <body>
       <!--========================================================== -->
@@ -102,7 +102,7 @@
 <!--========================================================== -->
 
     <footer class="w-100 d-flex  align-items-center justify-content-center flex-wrap">
-        <p class="fs-5 px-3  pt-3">Male Management &copy; All Rights Reserved 2022</p>
+        <p class="fs-5 px-3  pt-3">MODEL Management &copy; All Rights Reserved 2022</p>
         <div id="iconos" >
             <a href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a>
             <a href="https://twitter.com/"><i class="bi bi-twitter"></i></a>
