--- a/galeria.html
+++ b/galeria.html
@@ -55,7 +55,7 @@
                         <!--GALERIA-->
 <!--========================================================== -->          
 <div class="container" data-aos="fade-up" data-aos-duration="2000">
-  <h1 class="fw-light text-center text-lg-center mt-4 mb-0" >Portfolio</h1>
+  <h1 class="fw-light text-center text-lg-center mt-4 mb-2" >Face of the company</h1>
   <div class="row text-center text-lg-start">
       <div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
           <div class="d-block mb-4 h-100">
