--- a/acercadenosotros.html
+++ b/acercadenosotros.html
@@ -8,7 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="icon" href="medium-m-brands.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"> 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="estilos.css">
 
@@ -53,7 +54,7 @@
 <!--========================================================== -->
                         <!--perfiles-->
 <!--========================================================== -->   
-<div class="containerv2">
+<div class="containerv2" data-aos="fade-up" data-aos-duration="2000">
     <div class="row">
         <div class="col-lg-4">
             <div class="card p-0">
@@ -88,7 +89,7 @@
                 <div class="card-image"> <img src="imagenes/pic3.jpg" alt=""> </div>
                 <div class="card-content d-flex flex-column align-items-center">
                     <h4 class="pt-2">Raphael</h4>
-                    <h5>Founder</h5>
+                    <h5>Owner & Founder</h5>
                     <ul class="social-icons d-flex justify-content-center">
                         <li style="--i:1"> <a href="https://www.facebook.com/"> <span class="fab fa-facebook"></span> </a> </li>
                         <li style="--i:2"> <a href="https://twitter.com/"> <span class="fab fa-twitter"></span> </a> </li>
@@ -99,6 +100,28 @@
         </div>
     </div>
 </div>      
+<!--========================================================== -->
+                        <!--contenido-->
+<!--========================================================== -->  
+
+<div class="container" data-aos="fade-up" data-aos-duration="2000">
+	<div class="row">
+		<div lc-helper="background" class="col-lg-6 order-lg-2 mb-4" style="min-height: 38vh; background-size: cover; background-position: center; background-image: url('https://images.unsplash.com/7/salzburg-x.jpg?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;h=768&amp;fit=crop&amp;ixid=eyJhcHBfaWQiOjM3ODR9');"></div>
+		<div class="col-lg-6 order-lg-1 mt-auto mb-4 p-5" style="background-color: black;">
+			<div class="lc-block">
+				<div class="about">
+					<h1>About Us</h1>
+					<p>At MODEL, our vision is to promote young talents to bring out the best in them, regarding their image and education.
+          </p>
+          <p>Since opening our doors in France 2001, MODEL has empowered women & men to build careers in the fashion world.</p>
+          <p>We use our platform to develop interesting new faces and grow careers for some of the world's most talented people in the pursuit of success.</p>
+          <p>Run by its owner & founder, Rafael, a young designer, MODEL is constantly innovating to connect creatives to top talent, including high fashion models and celebrities.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <!--========================================================== -->
                         <!--FOOTER-->
 <!--========================================================== -->      
@@ -116,6 +139,9 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>    
   </body>
 </html>
